Corrected issue with "View All Projects" link on main page. Corrected height of Amazon Payments div to prevent footer from being misaligned.

--- a/public/stylesheets/sass/screen.scss
+++ b/public/stylesheets/sass/screen.scss
@@ -377,6 +377,7 @@ body {
 #processed_by {
   margin: 22px 0 0 160px;
   float: left;
+  height: 45px;
 }
 
 #partners {
@@ -417,7 +418,7 @@ body {
 #view_projects_all {
   height: 20px;
   width: 125px;
-  top: -8px;
+  top: -17px;
   left: -35px;
   margin: 0;
   padding: 0;
